# BayesCFM

./: README.md  pyproject.toml  vfm.ipynb
.ipynb_checkpoints/: README-checkpoint.md  Untitled-checkpoint.ipynb
bayes_cfm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bayescfm/: __init__.py
bayescfm/losses/: cfm.py
bayescfm/losses/.ipynb_checkpoints/: cfm-checkpoint.py
bayescfm/metrics/: __init__.py  classwise.py  cms_ssim.py  core.py  coverage.py  duplicates.py  frontier.py  inception.py  lpips_dispersion.py  mia.py  prdc.py
bayescfm/model/: samplers.py  unet.py
bayescfm/model/.ipynb_checkpoints/: samplers-checkpoint.py  unet-checkpoint.py
bayescfm/posterior/: laplace.py  sgmcmc.py
bayescfm/posterior/.ipynb_checkpoints/: laplace-checkpoint.py
bayescfm/training/: train_cfm.py  train_cgm.py  train_cgm_bayes.py
bayescfm/training/.ipynb_checkpoints/: train_cfm-checkpoint.py  train_cgm-checkpoint.py  train_cgm_bayes-checkpoint.py
bayescfm/utils/: ops.py
dev/: Untitled.ipynb  cfm_convergence.ipynb  cfm_sgmcmc.ipynb  testing.ipynb
dev/.ipynb_checkpoints/: Untitled-Copy1-checkpoint.ipynb  Untitled-Copy2-checkpoint.ipynb  cfm_laplace-checkpoint.ipynb  testing-checkpoint.ipynb
examples/: metrics_adv_demo.py  metrics_demo.py  metrics_extra_demo.py  noise_smoke.py  train_smoke_ad.py
