[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-cfm"
version = "0.0.1"
description = "Bayesian Conditional Flow Matching with autodiff-based Jacobian regularizers, UNet backbone, SG-MCMC & Laplace posteriors, ODE samplers, and metrics."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
keywords = ["diffusion", "flow matching", "conditional flow matching", "bayesian deep learning", "generative models"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "numpy>=1.23",
]

[project.optional-dependencies]
metrics = [
  "lpips>=0.1.4",
  "pytorch-msssim>=1.0.0",
  "scipy>=1.9",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["bayescfm*"]
